# GIF-Player

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  NOTICE.md  PACKAGING.md  README.md  flake.nix  gif-control.py  gif-picker.py  gif-script.py  gif.fish  gif_control_entry.py  gif_picker_entry.py  gif_player_bootstrap.py  gif_player_cli.py  gif_player_ipc.py  gif_player_paths.py  gif_player_runtime.py  gif_player_runtime_guard.py  gif_player_runtime_patch.py  pyproject.toml
.github/workflows/: ci.yml  cross-distro.yml  nix.yml
completions/: gif-player.fish
data/: gif-player-control.desktop  gif-player-picker.desktop
docs/: PLAYER_PIPELINE_ANALYSIS.md
nix/: package.nix
packaging/arch/: .SRCINFO  PKGBUILD
packaging/fedora/: gif-player.spec
tests/: test_gif_decode.py  test_ipc.py  test_paths.py  test_runtime_logic.py  test_source_contract.py
